fix invisible 2019 map

--- a/2019/css/style.css
+++ b/2019/css/style.css
@@ -733,6 +733,11 @@ footer {
   #intro {
     height: 100vh;
   }
-
 }
 
+/*
+ * Custom shit 2019 by LDTO
+ */
+#map {
+	height: 80vmin;
+}
